--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 </head>
 
 <body>
-  <div id="root" class="mail-list" v-cloak>
+  <div id="root" class="mail-list" :style="{backgroundColor: bkgColor}" v-cloak>
     <ul>
-      <li v-for="(item, index) in arrMails" :key="item" v-show="arrMails.length == 10">
+      <li v-for="(item, index) in arrMails" :key="item" v-show="arrMails.length == 10"
+        :style="{color: randomColors[index]}">
         <i class="fa-solid fa-envelope"></i> {{ item }}
       </li>
     </ul>
